k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: numspot-backend
  labels:
    app: numspot-backend
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app: numspot-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
